# aiorefoss

./: .gitignore  README.md  pyproject.toml  setup.md  setup.py
aiorefoss/: __init__.py  common.py  json.py
aiorefoss/rpc_device/: device.py  wsrpc.py
