[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aiorefoss"
version = "1.0.3"
authors = [
  { name="ashionky", email="495519020@qq.com" }
]
description = "Asynchronous Python library for Refoss smart devices"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Home Automation",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
keywords = ["refoss", "homeassistant", "iot", "smart-home", "automation"]
dependencies = [
    "aiohttp>=3.9.0",
    "yarl>=1.9.0",
]

[project.optional-dependencies]
fastjson = ["orjson>=3.9.0"]

[project.urls]
"Homepage" = "https://github.com/ashionky/aiorefoss"
"Bug Tracker" = "https://github.com/ashionky/aiorefoss/issues"
"Repository" = "https://github.com/ashionky/aiorefoss"

[tool.setuptools.packages.find]
exclude = ["tests*", "venv*", "*.egg-info"]
